--- a/doc/informe.lyx
+++ b/doc/informe.lyx
@@ -1,8 +1,8 @@
-#LyX 1.4.2 created this file. For more info see http://www.lyx.org/
+#LyX 1.4.3-4 created this file. For more info see http://www.lyx.org/
 \lyxformat 245
 \begin_document
 \begin_header
-\textclass article
+\textclass amsart
 \language spanish
 \inputencoding auto
 \fontscheme default
@@ -788,6 +788,67 @@ Ejemplos de uso
 
 \begin_layout Section
 Conclusiones generales
+\end_layout
+
+\begin_layout Standard
+En líneas generales, hemos encontrado un código que cumple con los módulos,
+ funcionamiento y estructuras clásicas que describe la bibliografía para
+ una base de datos, en especial el libro de Ramakrishna.
+\end_layout
+
+\begin_layout Standard
+Por lo tanto, podemos afirmar que minibase posee las características necesarias
+ para utilizarse como una base de datos de estudio.
+ 
+\end_layout
+
+\begin_layout Standard
+Sin embargo, hemos observado que Minibase posee un código de muy poca calidad.
+\end_layout
+
+\begin_layout Standard
+Los puntos más básicos y visibles para programar y/o extender funcionalidad
+ en Minibase son los siguientes: la construcción de las clases es incómoda;
+ a tal punto que ciertos constructores toman parámetros redundantes.
+ Incluso existen clases que no construyen totalmente a sus objetos en el
+ constructor, sino que hay que llamar luego a distintos métodos para completar
+ su construcción.
+ 
+\end_layout
+
+\begin_layout Standard
+Los métodos para generar querys son extremadamente rudimentarios y no aprovechan
+ en lo más mínimo el paradigma de objetos.
+ 
+\end_layout
+
+\begin_layout Standard
+En muchos módulos se utilizan listas encadenadas ( BM, HeapFile, étc ).
+ Estas listas están implementadas sobre nodos con apuntadores al siguiente.
+ Java, al igual que la mayoría de los lenguajes OO, posee estructuras de
+ datos dinámicas, que implementan de igual manera esta funcionalidad( coleccione
+s, y en su última versión, colecciones genéricas ) evitando la ardua tarea
+ de desarrollar y mantener listas compuestas por nodos con apuntadores.
+\end_layout
+
+\begin_layout Standard
+Todo lo anterior se debe en su mayoría a un diseño de clases muy pobre.
+\end_layout
+
+\begin_layout Standard
+A tal nivel que no parece desapropiado conjeturar que minibase parece haberse
+ migrado del lenguaje C al lenguaje java sin el más mínimo análisis.
+ Obviando completamente los detalles( y no solo detalles ) del pasaje de
+ un lenguaje estructurado a otro orientado a objetos, con el consecuente
+ resultado de un código de pésima calidad.
+\end_layout
+
+\begin_layout Standard
+Dejando eso de lado, este trabajo práctico nos ha servido para familiarizamos
+ en profundidad con las ideas y funcionamiento de los módulos principales
+ que componen una RDBMS, en las distintas capas de abstracción.
+ Después de adquirir toda esa información, no parece nada imposible, eventualmen
+te, escribir de cero una RDBMS en parte o en su totalidad.
 \end_layout
 
 \begin_layout Section
